connect.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-to-external
  namespace: argocd
spec:
  podSelector: {}
  egress:
    - to:
        - ipBlock:
            cidr: 34.0.0.0/32
      ports:
        - port: 8080
